--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="recently_watched_topics">Recently watched topics</string>
     <string name="view_all">View all</string>
     <string name="loading">Loading</string>
+    <string name="show_less">Show less</string>
 </resources>
